# japan-trip

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  index.html  pyproject.toml  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  auto_request_review.yml
data/: booking-checklist.json  breakfast.json  cost-options.json  decision.json  design-tokens.json  flights.json  itinerary.json  local-image-map.json  weather.json
docs/: airbnb-kyoto-may31-jun2-2026.md  booking-research-2026-05-24.md  breakfast-near-lodging.md  budget-options.md  candidates.md  cash-withdrawal-plan-2026.md  dashboard-alternatives.md  decision-log.md  essential-iphone-apps.md  excafe-blog-reviews-handoff.md  excafe-review-translation.md  flights.md  gontaro-review-translation.md  huis-ten-bosch-flights-may-2026.md  icoca-iphone-setup.md  isetan-matcha-dessert-translation.md  isetan-porta-shopping-translation.md  jejuair-icn-kobe-june-2026.md  kaneyo-review-translation.md  kyoto-itinerary-may-2026.md  kyoto-itinerary-may31-jun3-2026.md  kyoto-station-kaiten-sushi-translation.md  maccha-house-review-translation.md  manzaratei-review-translation.md  menami-blog-reviews-handoff.md  menami-review-translation.md  nagasaki-htb-itinerary-may-2026.md  nakamura-shoten-review-translation.md  ryokan-onsen-preparations.md  saihoji-reservation-2026-06.md  shinkyogoku-review-translation.md  soyeon-maps-list.md  transit-guide-may31-jun3.md  transit-mcp-handoff.md  transit-pass-jr-kansai-2026.md  weather.md  yoshimura-review-translation.md
reports/: final-report.md
scripts/: budget.py  score.py  (+7 more)
(+192 files in other folders)
